--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
   "name": "signup-flow",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "6.11.1",
+    "npm": "3.10.9"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "1.4.9",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -23,6 +29,7 @@
     "@angular/router": "^4.2.4",
     "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.2",
