--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.2",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "typescript": "~2.3.3"
   },
   "devDependencies": {
     "@angular/cli": "1.4.9",
