--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
