--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "materialize-css": "^0.100.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "@angular/compiler-cli": "^4.2.4"
   },
   "devDependencies": {
     "@angular/cli": "1.4.9",
